add instructor affiliate link to all my egghead links

--- a/src/posts/published/graphs-are-everywhere/index.mdx
+++ b/src/posts/published/graphs-are-everywhere/index.mdx
@@ -11,7 +11,7 @@ import DirectedGraph from './DirectedGraph'
 
 A few years ago, I was interviewing for a new job and it was the first time I was asked to whiteboard algorithms. It did not go well. In fact, **I got my ass handed to me**.
 
-I was not prepared. With no formal education in computer science, and just a couple years of writing mostly HTML templating and CSS, I didn't have the skills to pass those tests. Motivated by that failure, I began learning some some basic computer science knowledge in the forms of data structures and algorithms. That education lead to my [Intro to Data Structures and Algorithms course](https://egghead.io/courses/data-structures-and-algorithms-in-javascript) on [egghead.io](https://egghead.io). Gaining this knowledge, it changed the way I see things in the world.
+I was not prepared. With no formal education in computer science, and just a couple years of writing mostly HTML templating and CSS, I didn't have the skills to pass those tests. Motivated by that failure, I began learning some some basic computer science knowledge in the forms of data structures and algorithms. That education lead to my [Intro to Data Structures and Algorithms course](https://egghead.io/courses/data-structures-and-algorithms-in-javascript/?af=8u8eik) on [egghead.io](https://egghead.io/?af=8u8eik). Gaining this knowledge, it changed the way I see things in the world.
 
 One of the data structures I find most interesting is the [graph](<https://en.wikipedia.org/wiki/Graph_(abstract_data_type)>). A graph is a collection of nodes (also known as vertices) and edges (also known as links or lines) that connect those nodes. One specific type of graph is the directed graph. The edges of a directed graph convey _direction_; that is, it is not enough to show nodes are connected, but (and not to personify nodes too much) _from_ who _to_ whom. Each connection has a _source_ and a _target_.
 
