--- a/src/posts/published/just-enough-fp-argument-order/index.mdx
+++ b/src/posts/published/just-enough-fp-argument-order/index.mdx
@@ -97,7 +97,7 @@ Argument order in curried functions makes a big difference in how useful and reu
 
 ---
 
-_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript) course on egghead. This post is based on the lesson [Improve JavaScript Function Usability with Proper Argument Order in Functional Programming](https://egghead.io/lessons/javascript-improve-javascript-function-usability-with-proper-argument-order-in-functional-programming)._
+_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript/?af=8u8eik) course on egghead. This post is based on the lesson [Improve JavaScript Function Usability with Proper Argument Order in Functional Programming](https://egghead.io/lessons/javascript-improve-javascript-function-usability-with-proper-argument-order-in-functional-programming/?af=8u8eik)._
 
 <EggheadEmbed
   src="https://egghead.io/lessons/javascript-improve-javascript-function-usability-with-proper-argument-order-in-functional-programming/embed"
