--- a/src/posts/published/just-enough-fp-composition/index.mdx
+++ b/src/posts/published/just-enough-fp-composition/index.mdx
@@ -125,7 +125,7 @@ Composition is the act of passing the result of one function directly as the inp
 
 ---
 
-_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript) course on egghead. This post is based on the lesson [Build Up Complex Functionality by Composing Simple Functions in JavaScript](https://egghead.io/lessons/javascript-build-up-complex-functionality-by-composing-simple-functions-in-javascript)._
+_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript/?af=8u8eik) course on egghead. This post is based on the lesson [Build Up Complex Functionality by Composing Simple Functions in JavaScript](https://egghead.io/lessons/javascript-build-up-complex-functionality-by-composing-simple-functions-in-javascript/?af=8u8eik)._
 
 <EggheadEmbed
   src="https://egghead.io/lessons/javascript-build-up-complex-functionality-by-composing-simple-functions-in-javascript/embed"
