--- a/src/posts/published/just-enough-fp-currying/index.mdx
+++ b/src/posts/published/just-enough-fp-currying/index.mdx
@@ -102,7 +102,7 @@ As we'll see in the next post, currying and partial application is a powerful co
 
 ---
 
-_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript) course on egghead. This post is based on the lesson [Refactor a Function to Use Currying in JavaScript](https://egghead.io/lessons/javascript-refactor-a-function-to-use-currying-in-javascript)._
+_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript/?af=8u8eik) course on egghead. This post is based on the lesson [Refactor a Function to Use Currying in JavaScript](https://egghead.io/lessons/javascript-refactor-a-function-to-use-currying-in-javascript/?af=8u8eik)._
 
 <EggheadEmbed
   src="https://egghead.io/lessons/javascript-refactor-a-function-to-use-currying-in-javascript/embed"
