--- a/src/posts/published/just-enough-fp-higher-order-functions/index.mdx
+++ b/src/posts/published/just-enough-fp-higher-order-functions/index.mdx
@@ -84,7 +84,7 @@ As you grow more comfortable with higher order functions, I'm certain you will f
 
 ---
 
-_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript) course on egghead. This post is based on the lesson [Modify Functions with Higher Order Functions in JavaScript](https://egghead.io/lessons/javascript-modify-functions-with-higher-order-functions-in-javascript)._
+_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript/?af=8u8eik) course on egghead. This post is based on the lesson [Modify Functions with Higher Order Functions in JavaScript](https://egghead.io/lessons/javascript-modify-functions-with-higher-order-functions-in-javascript/?af=8u8eik)._
 
 <EggheadEmbed
   src="https://egghead.io/lessons/javascript-modify-functions-with-higher-order-functions-in-javascript/embed"
