--- a/src/posts/published/just-enough-fp-immutability/index.mdx
+++ b/src/posts/published/just-enough-fp-immutability/index.mdx
@@ -117,7 +117,7 @@ In functional programming, we require immutable changes because of the purity of
 
 ---
 
-_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript) course on egghead. This post is based on the lesson [Avoiding Mutations in JavaScript with Immutable Data Structures](https://egghead.io/lessons/javascript-avoiding-mutations-in-javascript-with-immutable-data-structures)._
+_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript/?af=8u8eik) course on egghead. This post is based on the lesson [Avoiding Mutations in JavaScript with Immutable Data Structures](https://egghead.io/lessons/javascript-avoiding-mutations-in-javascript-with-immutable-data-structures/?af=8u8eik)._
 
 <EggheadEmbed
   src="https://egghead.io/lessons/javascript-avoiding-mutations-in-javascript-with-immutable-data-structures/embed"
