--- a/src/posts/published/just-enough-fp-partial-application/index.mdx
+++ b/src/posts/published/just-enough-fp-partial-application/index.mdx
@@ -147,7 +147,7 @@ Partial application is just the natural combination of curried functions and clo
 
 ---
 
-_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript) course on egghead. This post is based on the lesson [Create Reusable Functions with Partial Application in JavaScript](https://egghead.io/lessons/javascript-create-reusable-functions-with-partial-application-in-javascript)._
+_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript/?af=8u8eik) course on egghead. This post is based on the lesson [Create Reusable Functions with Partial Application in JavaScript](https://egghead.io/lessons/javascript-create-reusable-functions-with-partial-application-in-javascript/?af=8u8eik)._
 
 <EggheadEmbed
   src="https://egghead.io/lessons/javascript-create-reusable-functions-with-partial-application-in-javascript/embed"
