--- a/src/posts/published/just-enough-fp-pure-functions/index.mdx
+++ b/src/posts/published/just-enough-fp-pure-functions/index.mdx
@@ -114,7 +114,7 @@ In my opinion, your goal should be to use more pure functions in your applicatio
 
 ---
 
-_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript) course on egghead. This post is based on the lesson [Identify Side Effects by Comparing Pure and Impure Functions](https://egghead.io/lessons/javascript-identify-side-effects-by-comparing-pure-and-impure-javascript-functions-342b2167)._
+_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript/?af=8u8eik) course on egghead. This post is based on the lesson [Identify Side Effects by Comparing Pure and Impure Functions](https://egghead.io/lessons/javascript-identify-side-effects-by-comparing-pure-and-impure-javascript-functions-342b2167/?af=8u8eik)._
 
 <EggheadEmbed
   src="https://egghead.io/lessons/javascript-identify-side-effects-by-comparing-pure-and-impure-javascript-functions-342b2167/embed"
