--- a/src/posts/published/just-enough-fp-pointfree/index.mdx
+++ b/src/posts/published/just-enough-fp-pointfree/index.mdx
@@ -111,7 +111,10 @@ const splitAtSpace = split(' ')
 const joinWithHyphen = join('-')
 
 // Bit of a crazy way to do it, but should still make sense
-const slugs = strings.map(lowerCase).map(splitAtSpace).map(joinWithHyphen)
+const slugs = strings
+  .map(lowerCase)
+  .map(splitAtSpace)
+  .map(joinWithHyphen)
 ```
 
 Now, I can read in plain English what's going on in the final part of my program. Admittedly, it's pretty verbose this way, so let me give you a sneak peek to the next blog post and do this magically with composition:
@@ -135,7 +138,7 @@ It will take some time to get used to, but with practice, reading pointfree prog
 
 ---
 
-_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript) course on egghead. This post is based on the lesson [Eliminate Anonymous JavaScript Functions with Pointfree Programming](https://egghead.io/lessons/javascript-eliminate-anonymous-javascript-functions-with-pointfree-programming)._
+_In this series, I'm going over material from my [Just Enough Functional Programming in JavaScript](https://egghead.io/courses/just-enough-functional-programming-in-javascript/?af=8u8eik) course on egghead. This post is based on the lesson [Eliminate Anonymous JavaScript Functions with Pointfree Programming](https://egghead.io/lessons/javascript-eliminate-anonymous-javascript-functions-with-pointfree-programming/?af=8u8eik)._
 
 <EggheadEmbed
   src="https://egghead.io/lessons/javascript-eliminate-anonymous-javascript-functions-with-pointfree-programming/embed"
