--- a/src/posts/published/just-enough-functional-programming-course-launch/index.mdx
+++ b/src/posts/published/just-enough-functional-programming-course-launch/index.mdx
@@ -17,9 +17,9 @@ relatedPostsSlugs: [
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
 
-In 2017, I came across [The Mostly Adequate Guide to Functional Programming](https://github.com/MostlyAdequate/mostly-adequate-guide) by [Brian Lonsdorf](https://twitter.com/drboolean). It's an incredible resource and introduction to functional programming in JavaScript. It inspired me to start giving talks about functional programming in 2018. After giving the talk several times, I decided to make a course to go along with it. That course is available to you now on [egghead.io](https://egghead.io/course/just-enough-functional-programming-in-javascript).
+In 2017, I came across [The Mostly Adequate Guide to Functional Programming](https://github.com/MostlyAdequate/mostly-adequate-guide) by [Brian Lonsdorf](https://twitter.com/drboolean). It's an incredible resource and introduction to functional programming in JavaScript. It inspired me to start giving talks about functional programming in 2018. After giving the talk several times, I decided to make a course to go along with it. That course is available to you now on [egghead.io](https://egghead.io/course/just-enough-functional-programming-in-javascript/?af=8u8eik).
 
-The course is called [Just Enough Functional Programming in JavaScript](https://egghead.io/course/just-enough-functional-programming-in-javascript) and I think you'll like it.
+The course is called [Just Enough Functional Programming in JavaScript](https://egghead.io/course/just-enough-functional-programming-in-javascript/?af=8u8eik) and I think you'll like it.
 
 It's a concise, to-the-point introduction to functional programming designed to help you get started and start applying these concepts to your work right away.
 
