--- a/src/posts/published/make-your-own-charts-in-react-without-a-charting-library-part-1/index.mdx
+++ b/src/posts/published/make-your-own-charts-in-react-without-a-charting-library-part-1/index.mdx
@@ -1,22 +1,29 @@
 ---
 categories: ['JavaScript', 'Web Development']
-tags: ['React']
+tags: ['React', 'SVG']
 date: '2017-06-24'
 slug: 'make-your-own-charts-in-react-without-a-charting-library'
 title: 'Make Your Own Charts in React Without a Charting Library'
 ---
 
+import EggheadEmbed from '../../../components/EggheadEmbed'
+
 Occasionally I see someone ask, "What's the best way to make bar charts with React? Are there any great libraries?" I often respond with, "Why not build it with React yourself?"
 
-React's one-way data binding model is perfect for creating simple data visualizations from scratch and I want to show you how. This will be a multi-part series of posts, and we'll try to make something progressively more challenging with each one.
+React's one-way data binding model is perfect for creating simple data visualizations from scratch and I want to show you how.
 
 ### Why shouldn't I use a charting library?
 
-Charting libraries are great! I'm not going to stop you. But bringing in a whole library for a simple data viz seems a bit like overkill to me. If you go the route of adding a charting library to your application, you now have to understand two APIs versus one. React's API is well suited to creating these visualizations, so I'm encouraging you to use what you already know.
+Charting libraries are great! I'm not going to stop you. But bringing in a whole library for a simple data viz might be a bit of overkill in some situations. If you go the route of adding a charting library to your application, you now have to understand two APIs versus one. React's API is well suited to creating these visualizations, so I'm encouraging you to use what you already know.
 
 ### A Simple Bar Chart
 
-The first chart we are going to build is a bar chart. These are really easy to build with React. Once you understand the concepts, I'm sure you'll be jumping ahead and making even more complex visualizations in no time. Let's get started.
+<EggheadEmbed
+  src="https://egghead.io/lessons/javascript-build-a-bar-chart-with-svg-from-scratch-with-react/embed"
+  title="Bar Chart from Scratch"
+/>
+
+We are going to build is a bar chart. These are really easy to build with React. Once you understand the concepts, I'm sure you'll be jumping ahead and making even more complex visualizations in no time. Let's get started.
 
 To make our bar chart, we're going to first need some data. Because I lack creativity, I'm going to create a data set based on the number of repos a few of my favorite Github users own (and mine for good measure):
 
@@ -138,4 +145,8 @@ const BarChart = ({ data }) => {
 
 And there you have it, a very simple to make bar chart. Take a look and play with the chart below:
 
-<iframe src="https://codesandbox.io/embed/oQGjvR6ZK" style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;" sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"></iframe>
+<iframe
+  src="https://codesandbox.io/embed/oQGjvR6ZK"
+  style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;"
+  sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
+></iframe>
