finish post on the log component

--- a/src/posts/published/how-to-display-object-data-with-a-react-component/index.mdx
+++ b/src/posts/published/how-to-display-object-data-with-a-react-component/index.mdx
@@ -9,7 +9,7 @@ import EggheadEmbed from '../../../components/EggheadEmbed'
 import Log from './Log'
 
 <EggheadEmbed
-  src="https://egghead.io/lessons/react-render-an-object-with-json-stringify/embed"
+  src="https://egghead.io/lessons/react-render-an-object-with-json-stringify-in-react/embed"
   title="Render an Object with JSON.stringify in React"
 />
 
@@ -43,4 +43,4 @@ We can now use this component anywhere we would like to display an object in our
 
 <Log value={{ name: 'Kyle Shevlin', age: 34, location: 'Portland, OR' }} />
 
-Use this whenever you'd like to display your object in the browser instead of looking at a value in the console or the Dev Tools.
+Use this whenever you'd like to display your object in the browser instead of looking at the object value in the console or the devtools.
