--- a/src/posts/published/how-to-display-object-data-with-a-react-component/index.mdx
+++ b/src/posts/published/how-to-display-object-data-with-a-react-component/index.mdx
@@ -3,6 +3,9 @@ date: '2019-12-27'
 slug: 'how-to-render-an-object-in-react'
 title: 'How to Render an Object in React'
 subtitle: 'Building a `Log` Component'
+description: 'Learn how to render an object in React by using JSON.stringify'
+categories: ['JavaScript', 'Web Development']
+tags: ['React']
 ---
 
 import EggheadEmbed from '../../../components/EggheadEmbed'
