--- a/src/posts/published/enumerate-dont-booleanate/index.mdx
+++ b/src/posts/published/enumerate-dont-booleanate/index.mdx
@@ -91,7 +91,7 @@ function sendOrder({ quantity }) {
 
 You can see a running example of this code at: [https://codesandbox.io/s/hopeful-ritchie-lk7cs](https://codesandbox.io/s/hopeful-ritchie-lk7cs).
 
-Disregarding the anachronism that React existed when I was starting my career (let alone Hooks), this form is pretty decent. Naive Kyle even managed to think of `isSuccess`, a bit of state that will tell the user that they successfully ordered there donuts. However, as often happens with projects, the scope wasn't fully defined or something important was forgetten. The project manager comes back to me,
+Disregarding the anachronism that React existed when I started my career (let alone Hooks), this form is pretty decent. Naive Kyle even managed to think of `isSuccess`, a bit of state that will tell the user that they successfully ordered their donuts. However, as often happens with projects, the scope wasn't fully defined or something important was forgotten. The project manager comes back to me,
 
 "Kyle, that's great, but you forgot that sometimes the API is going to fail. As scary as it might be to tell people who want donuts that their donuts aren't on the way just yet, we gotta do it. We had one customer, Dinah, who tried to order some donuts, but didn't know that the order had failed. She just sat there, waiting for them to be delivered, until she shriveled up and died of donut starvation. Tragic, I know. We can't lose customers like that. Can you handle errors for us?"
 
