tidy up enumerate dont booleanate

--- a/src/posts/published/enumerate-dont-booleanate/index.mdx
+++ b/src/posts/published/enumerate-dont-booleanate/index.mdx
@@ -15,7 +15,7 @@ Let's imagine me just a few years back. I show up to work one morning and my pro
 
 "Of course I can!"
 
-I would head off to my work station and start building a form just as fast as I could and probably came up with something like this:
+I would head off to my work station and start building a form just as fast as I could and probably come up with something like this:
 
 ```jsx
 import React from 'react'
@@ -412,7 +412,7 @@ import { useMachine } from '@xstate/react'
 //...
 ```
 
-Let's create our state machine by combining our `initial` and `states` into a configuration object for our machine.
+Now that we've imported the `Machine` factory function, let's pass our state `chart` to it.
 
 ```javascript
 const donutFormMachine = Machine(chart)
